--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@ var _hmt = _hmt || [];
 	   
 	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, AAAI'22, CVPR'22.
     </div>
+	
 	 
-      <h2>Talks</h2>
+     <!-- <h2>Talks</h2>
 	<ul>
         <li>
 		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
@@ -321,7 +322,7 @@ var _hmt = _hmt || [];
 	</li>
 	
 	</ul> 
-
+	-->
      
 	
    
