--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ var _hmt = _hmt || [];
 		<img src="img/IJCAI21.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="https://www.ijcai.org/proceedings/2021/0153.pdf" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><strong>[<a href="https://www.ijcai.org/proceedings/2021/0153.pdf">PDF</a>]</strong><br>
-		<p >Wenjie Wang, <strong>Shiming Chen</strong>, Yufeng Shi, Qinmu Peng, Feng Zheng, Xinge You</p>
+		<p >Wenjie Wang, Yufeng Shi, <strong>Shiming Chen</strong>, Qinmu Peng, Feng Zheng, Xinge You</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>(CCF-A)</strong>
 		</td>
 	</tr>
