--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
  <tr><tr><tr><tr>
 <div style="margin-top: 10px"></div>
     <h2>Publications </h2>
-<!--<p><a href="http://scholar.google.com/citations?user=PeMuphgAAAAJ">My Google Scholar</a></p>-->
+<!--<p><a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">My Google Scholar</a></p>-->
 	 
 <!--<table id="tbPublications" width="100%">
 	<tbody>
