--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted by <strong><i>AAAI'22</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted by <strong><i>IEEE Transactions on Neural Networks and Learning
+	      Systems</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted by <strong><i>AAAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted by <strong><i>NeurIPS'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted by <strong><i>ICCV'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
@@ -211,6 +213,19 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>	
 <h3 style="color: red">Journal Papers</h3>
+	
+    <tr>	
+		<td width="206">
+		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a><br>
+		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-sen Xie, Qinmu Peng, Xinge You, Weiping Ding, Ling Shao.</p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), to appear, 2022. <strong>
+		 (SCI, IF=10.451, CCF-B)</strong></p>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+	
     <tr>	
 		<td width="206">
 		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
