--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
 	      Systems (TNNLS)</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
@@ -153,7 +154,20 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <h3 style="color: red">Conference Papers </h3>
-
+<tr>
+	
+		<td width="206">
+		<img src="img/MSDN-CVPR22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.<br>
+		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Wang, Qinmu Peng, Kai Wang, Jian. Jian Zhao, Xinge You.</p>
+       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	
+	
 <tr>
 	
 		<td width="206">
