--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ var _hmt = _hmt || [];
 		<img src="img/MSDN-CVPR2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a><br>
-		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Wang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
+		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
        <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
