--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@ var _hmt = _hmt || [];
    
     <h2>Industrial Experience</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left">Tencent, AI Lab. </div> <div style="float:right; text-align:right">Jan. 2022 – Present</div><br>
+		Research Intern<br>
+		Topic: Zero-shot Learning, Visual-and-Language System<br>
+	</li>
         <li>
 		<div style="float:left; text-align:left">Alibaba DAMO Academy, Machine Intelligence, Vision Lab. Hosted by <a href="https://www.cse.msu.edu/~rongjin/">Rong Jin</a> </div> <div style="float:right; text-align:right">May. 2021 – Oct. 2021</div><br>
 		Research Intern<br>
@@ -331,18 +336,23 @@ var _hmt = _hmt || [];
 	 
      <!-- <h2>Talks</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left">Extreme Mart (极市)</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Bilibili</a>]
+	</li>
         <li>
 		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
-		Title: The Overview of Zero-Shot Learning<br>
+		<strong>Title</strong>: The Overview of Zero-Shot Learning<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">Tencent AI Lab </div> <div style="float:right; text-align:right">Dec. 2021</div><br>
-		Title: The Frontiers in Zero-Shot Learning<br>
+		<strong>Title</strong>: The Frontiers in Zero-Shot Learning<br>
 	</li>
 		
 	<li>
 		<div style="float:left; text-align:left">Oppo</div> <div style="float:right; text-align:right">Nov. 2021</div><br>
-		Title: My Works in Zero-Shot Learning<br>
+		<strong>Title</strong>: My Works in Zero-Shot Learning<br>
 	</li>
 		
 	<li>
