--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ var _hmt = _hmt || [];
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
 	      Systems (TNNLS)</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.01.20</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.07.23</span>, one paper is accepted to <strong><i>ICCV'21</i></strong>.</li>
