--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ var _hmt = _hmt || [];
     </div>
 	
 	 
-     <!-- <h2>Talks</h2>
+     <h2>Invited Talks</h2>
 	<ul>
 	<li>
 		<div style="float:left; text-align:left">Extreme Mart (极市)</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
@@ -352,17 +352,12 @@ var _hmt = _hmt || [];
 	</li>
 		
 	<li>
-		<div style="float:left; text-align:left">Oppo</div> <div style="float:right; text-align:right">Nov. 2021</div><br>
-		<strong>Title</strong>: My Works in Zero-Shot Learning<br>
-	</li>
-		
-	<li>
 		<div style="float:left; text-align:left">Alibaba DAMO Academic </div> <div style="float:right; text-align:right">Aug. 2021</div><br>
 		Title: 	HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning<br>
 	</li>
 	
 	</ul> 
-	-->
+
      
 	
    
