--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@ var _hmt = _hmt || [];
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.24</span>, I gave a talk in Extreme Mart (极市).</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
 	      Systems (TNNLS)</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.17</span>, I gave a talk in AI TIME PhD-NeurIPS, invite by AI TIME.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.01.20</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.12.01</span>, one paper is accepted to <strong><i>AAAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.09.29</span>, one paper is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
@@ -342,6 +344,10 @@ var _hmt = _hmt || [];
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Bilibili</a>]
 	</li>
+       <li>
+		<div style="float:left; text-align:left">AI TIME</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<strong>Title</strong>: 基于层次适应的零样本学习<br>
+	</li>
         <li>
 		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
 		<strong>Title</strong>: The Overview of Zero-Shot Learning<br>
@@ -392,7 +398,7 @@ var _hmt = _hmt || [];
                 <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
-        &copy; Shiming Chen | <span style="color:Red">Last updated: September 29 2021</span>
+        &copy; Shiming Chen | <span style="color:Red">Last updated: April 15 2022</span>
             </div>
      </div>     
 	
