--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var _hmt = _hmt || [];
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Shiming Chen's Homepage</title>
-        <link rel="shortcut icon" href="img/Shiming.jpg"/>
+        <link rel="shortcut icon" href="img/chen1.jpg"/>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="keywords" content="Shimingchen, EIC, HUST, The Huazhong University of Science and Technology"> 
 	<meta name="description" content="Shiming Chen's home page">
