--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
-       <p style="margin-top: -11px"><i>Advances in Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
