--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
     <div id="news-content" >
 	  <span>I am come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br>
 	  I am currently a Third-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>. 
-		  My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>generative modeling and learning</i></strong>, <strong><i>zero-shot learning</i></strong>.</span> <br> <br> 
+		  My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>generative modeling and learning</i></strong>, <strong><i>zero-shot learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>.</span> <br> <br> 
 	  <span></span><br>
 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span>
     </div>
