--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.24</span>, I gave a talk in Extreme Mart (极市).</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
 	      Systems (TNNLS)</i></strong>.</li>
@@ -159,6 +160,20 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <h3 style="color: red">Conference Papers </h3>
+	
+<tr>	
+		<td width="206">
+		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
+		<p >Ziming Hong*, <strong>Shiming Chen*</strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You (<span style="color:Red">Equal-first author</span>)</p>
+	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(CCF-A)</strong>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+	
 <tr>
 	
 		<td width="206">
