--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ var _hmt = _hmt || [];
 		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
-		<p >Ziming Hong*, <strong>Shiming Chen*</strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You (<span style="color:Red">Equal-first author</span>)</p>
+		<p >Ziming Hong*, <strong>Shiming Chen*</strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You (<span style="color:Red">*Equal-first author</span>)</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(CCF-A)</strong>
 		</td>
 	</tr>
