--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf" target="_blank"> FREE: Feature Refinement for Generalized Zero-shot Learning.</a><strong>[<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
+		<td> <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf" target="_blank">
+			FREE: Feature Refinement for Generalized Zero-shot Learning.</a>
+			<strong>[<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong>
+			<strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Ling Shao.</p>
        <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021. <strong>(CCF-A)</strong> </i></p>
 		</td>
@@ -233,7 +237,8 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/IJCAI21.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://www.ijcai.org/proceedings/2021/0153.pdf" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a><strong>[<a href="https://www.ijcai.org/proceedings/2021/0153.pdf">PDF</a>]</strong><br>
+		<td><a href="https://www.ijcai.org/proceedings/2021/0153.pdf" target="_blank">Norm-guided Adaptive Visual Embedding for Zero-Shot Sketch-Based Image Retrieval.</a>
+			<strong>[<a href="https://www.ijcai.org/proceedings/2021/0153.pdf">PDF</a>]</strong><br>
 		<p >Wenjie Wang, Yufeng Shi, <strong>Shiming Chen</strong>, Qinmu Peng, Feng Zheng, Xinge You</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2021. <strong>(CCF-A)</strong>
 		</td>
@@ -252,7 +257,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a><br>
+		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a><strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-sen Xie, Qinmu Peng, Xinge You, Weiping Ding, Ling Shao.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), to appear, 2022. <strong>
 		 (SCI, IF=10.451, CCF-B)</strong></p>
