--- a/index.html
+++ b/index.html
@@ -348,14 +348,17 @@ var _hmt = _hmt || [];
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
 	   IEEE Transactions on Industrial Informatics (TII), 
 	   IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA), 
-	   Information Fusion (INF), Artificial Intelligence Review, 
+	   Information Fusion (INF),
+	   Artificial Intelligence Review, 
+	   Expert Systems With Applications，
 	   IEEE/CAA Journal of Automatica Sinica, 
            Information Sciences (INS),
 	   Neurocomputing,
            Applied Soft Computing, 
-	   Computer Communications,Journal of Visual Communication and Image Representation, etc.<br>
+	   Computer Communications,
+	   Journal of Visual Communication and Image Representation, etc.<br>
 	   
-	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, AAAI'22, CVPR'22.
+	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, IJCAI'22, AAAI'22, CVPR'22.
     </div>
 	
 	 
