--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ var _hmt = _hmt || [];
 		
 	<li>
 		<div style="float:left; text-align:left">Alibaba DAMO Academic </div> <div style="float:right; text-align:right">Aug. 2021</div><br>
-		Title: 	HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning<br>
+		<strong>Title</strong>: HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning<br>
 	</li>
 	
 	</ul> 
