--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ var _hmt = _hmt || [];
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We release the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.24</span>, I gave a talk in Extreme Mart (极市).</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
@@ -193,7 +194,10 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/TransZero-AAAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a><strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
+		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
+			<strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong>
+			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
+			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
 		</td>
