--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@ var _hmt = _hmt || [];
        <li>
 		<div style="float:left; text-align:left">AI TIME</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: 基于层次适应的零样本学习<br>
+	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Bilibili</a>]
 	</li>
         <li>
 		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
