--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
 		<p >Ziming Hong*, <strong>Shiming Chen*</strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You 
-			(<span style="color:Red">*:Equal-first author</span>)</p>
+			(<span style="color:Red">*:co-first author</span>)</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(CCF-A)</strong>
 		</td>
 	</tr>
@@ -199,7 +199,8 @@ var _hmt = _hmt || [];
 			<strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong>
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
-		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
+		 <p ><strong>Shiming Chen*</strong>, Ziming Hong*, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.
+			 (<span style="color:Red">*:co-first author</span>)</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(CCF-A)</strong> </i></p>
 		</td>
 	</tr>
