--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ var _hmt = _hmt || [];
 		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
-		<p >Ziming Hong<sup>#</sup></strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You<sup>#</sup> 
+		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You<sup>#</sup> 
 			(*:co-first author; <sup>#</sup>:corresponding author)</p>
 	       <p style="margin-top: -11px"><i>The 30th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(<span style="color:Green">CCF-A</span>)</strong>
 		</td>
