--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ var _hmt = _hmt || [];
 	   Computer Communications,
 	   Journal of Visual Communication and Image Representation, etc.<br>
 	   
-	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, IJCAI'22, AAAI'22, CVPR'22.
+	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, IJCAI'22, AAAI'22, CVPR'22, ECCV'22.
     </div>
 	
 	 
