--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a><strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]</strong><br>
+		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
+			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
+				[<a href="https://ieeexplore.ieee.org/document/9768177">PDF</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-sen Xie, Qinmu Peng, Xinge You, Weiping Ding, Ling Shao.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), to appear, 2022. <strong>
 		 (<span style="color:Green">SCI, IF=10.451, CCF-B</span>)</strong></p>
@@ -274,13 +276,13 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="CDE-GAN-website/figures/CDEGAN-pipeline.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a><br>
-		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. <strong>
-		 [<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
+		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a>
+		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
 		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]
-		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]
-		 (<span style="color:Green">SCI, IF=11.554, CCF-B</span>)</strong></p>
+		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong><br>
+		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. 
+		       <strong>(<span style="color:Green">SCI, IF=11.554, CCF-B</span>)</strong></p>
 		</td>
 	</tr>
 	<tr></tr>
