--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, I have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.24</span>, I gave a talk in Extreme Mart (极市).</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.22</span>, one paper is accepted to <strong><i>IEEE Transactions on Neural Networks and Learning
@@ -110,9 +110,9 @@ var _hmt = _hmt || [];
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.05.06</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.02.10</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEVC)</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
+<!--       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.09.01</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2019.01.09</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2018.10.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
     </div>
      
  <tr><tr><tr><tr>
