--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/MSDN-CVPR2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>][<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
+		<td> <a href="https://www.aaai.org/AAAI22Papers/AAAI-1580.ChenS.pdf" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>][<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
        <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022. <strong>(<span style="color:Gray">CCF-A</span>)</strong> </i></p>
 		</td>
