--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@ var _hmt = _hmt || [];
    <div>
 	<strong>Journal Reviewers:</strong> IEEE  Transactions on Image Processing (TIP), 
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
+	   IEEE Transactions on Cybernetics (TCYB),
 	   IEEE Transactions on Industrial Informatics (TII), 
 	   IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA), 
 	   Information Fusion (INF),
