--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ var _hmt = _hmt || [];
 		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
 		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You<sup>#</sup> 
 			(*:co-first author; #:corresponding author)</p>
-	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(<span style="color:Gray">CCF-A</span>)</strong>
+	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
 		</td>
 	</tr>
 	<tr></tr>
