--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
+		<td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
 			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
 				[<a href="https://ieeexplore.ieee.org/document/9768177">PDF</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-sen Xie, Qinmu Peng, Xinge You, Weiping Ding, Ling Shao.</p>
