--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.26</span>, I gave a talk about zero-shot learning in AI TIME and AI Drive.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.02.24</span>, I gave a talk in Extreme Mart (极市).</li>
@@ -373,6 +374,16 @@ var _hmt = _hmt || [];
 	 
      <h2>Invited Talks</h2>
 	<ul>
+ 	<li>
+		<div style="float:left; text-align:left">AI Drive</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
+	</li>
+	<li>
+		<div style="float:left; text-align:left">AI TIME</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<strong>Title</strong>: Attribute-guided Transformer for Zero-Shot Learning<br>
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Bilibili</a>]
+	</li>
 	<li>
 		<div style="float:left; text-align:left">Extreme Mart (极市)</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
