--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.26</span>, I gave a talk about zero-shot learning in AI TIME and AI Drive.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.26</span>, I gave talks about zero-shot learning in AI TIME and AI Drive.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
