--- a/index.html
+++ b/index.html
@@ -354,7 +354,9 @@ var _hmt = _hmt || [];
 	 
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
-	<strong>Journal Reviewers:</strong> IEEE  Transactions on Image Processing (TIP), 
+	<strong>Journal Reviewers:</strong> 
+	   Transactions on Pattern Analysis and Machine Intelligence (TPAMI)
+	   IEEE  Transactions on Image Processing (TIP), 
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
 	   IEEE Transactions on Cybernetics (TCYB),
 	   IEEE Transactions on Industrial Informatics (TII), 
