--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.26</span>, I gave talks about zero-shot learning in AI TIME and AI Drive.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.24</span>, I was invited as a peer reviewer for <strong><i>TPAMI</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I gave talks about zero-shot learning in AI TIME and AI Drive.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.03.02</span>, one paper is accepted to <strong><i>CVPR'22</i></strong>.</li>
@@ -355,7 +356,7 @@ var _hmt = _hmt || [];
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   Transactions on Pattern Analysis and Machine Intelligence (TPAMI)
+	   Transactions on Pattern Analysis and Machine Intelligence (TPAMI),
 	   IEEE  Transactions on Image Processing (TIP), 
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
 	   IEEE Transactions on Cybernetics (TCYB),
