--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ var _hmt = _hmt || [];
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   Transactions on Pattern Analysis and Machine Intelligence (TPAMI),
+	   IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI),
 	   IEEE  Transactions on Image Processing (TIP), 
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
 	   IEEE Transactions on Cybernetics (TCYB),
