--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ var _hmt = _hmt || [];
 	   IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI),
 	   IEEE  Transactions on Image Processing (TIP), 
 	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
+	   IEEE Transactions on Evolutionary Computation (TEVC),
 	   IEEE Transactions on Cybernetics (TCYB),
 	   IEEE Transactions on Industrial Informatics (TII), 
 	   IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA), 
