--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ var _hmt = _hmt || [];
     
     <tr>	
 		<td width="206">
-		<img src="img/GNDAN-TNNLS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/similarity-DT.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="https://arxiv.org/abs/1911.04254v3" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
