--- a/index.html
+++ b/index.html
@@ -356,22 +356,12 @@ var _hmt = _hmt || [];
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI),
-	   IEEE  Transactions on Image Processing (TIP), 
-	   IEEE Transactions on Neural Networks and Learning Systems (TNNLS),
-	   IEEE Transactions on Evolutionary Computation (TEVC),
-	   IEEE Transactions on Cybernetics (TCYB),
-	   IEEE Transactions on Industrial Informatics (TII), 
-	   IEEE Transactions on Systems, Man, and Cybernetics: Systems (T-SMCA), 
+	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TII, T-SMCA, 
 	   Information Fusion (INF),
 	   Artificial Intelligence Review, 
 	   Expert Systems With Applications，
 	   IEEE/CAA Journal of Automatica Sinica, 
-           Information Sciences (INS),
-	   Neurocomputing,
-           Applied Soft Computing, 
-	   Computer Communications,
-	   Journal of Visual Communication and Image Representation, etc.<br>
+           Information Sciences (INS), etc.<br>
 	   
 	 <strong>External Conference Reviewers:</strong> IJCAI'21, ACM MM'21, ICCV'21, IJCAI'22, AAAI'22, CVPR'22, ECCV'22.
     </div>
