--- a/index.html
+++ b/index.html
@@ -264,9 +264,11 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/similarity-DT.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://arxiv.org/abs/1911.04254v3" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
+		<td><a href="https://shiming-chen.github.io/Similarity-page/Similarit.html" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
-				[<a href="">PDF</a>]</strong><br>
+				[<a href="https://arxiv.org/abs/1911.04254v3">arXiv</a>]</strong>
+				[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>        
+			<br>
 		<p ><strong>Shiming Chen</strong>, Peng Zhang, Guo-sen Xie, Zehong Cao, Qinmu Peng, Wei Yuan, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), to appear, 2022. <strong>
 		 (<span style="color:Burlywood">SCI, IF=11.471</span>)</strong></p>
