--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ var _hmt = _hmt || [];
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.06.24</span>, I was invited as a peer reviewer for <strong><i>TPAMI</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.27</span>, I gave talks about our CVPR'22 work (MSDN) in VALSE.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I gave talks about zero-shot learning in AI TIME and AI Drive.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
@@ -371,6 +372,12 @@ var _hmt = _hmt || [];
 	 
      <h2>Invited Talks</h2>
 	<ul>
+	<li>
+		<div style="float:left; text-align:left">VALSE</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
+		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
+		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
+	</li>
  	<li>
 		<div style="float:left; text-align:left">AI Drive</div> <div style="float:right; text-align:right">June 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
