--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ var _hmt = _hmt || [];
       <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TII, T-SMCA, 
+	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TII, TSMCA, 
 	   Information Fusion (INF),
 	   Artificial Intelligence Review, 
 	   Expert Systems With Applications，
