--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ var _hmt = _hmt || [];
 <tr>
 	
 		<td width="206">
-		<img src="img/MSDN-CVPR2022.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/CVPR22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/abs/2203.03137" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>][<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
